# hpc-assignment

./: .gitignore  CMakeLists.txt  README.md  hpc_assignment  main.cpp  mpicxxcompile.sh
jobs/: d17p64snX.o232741  d17pXsn0.o232563  d17pXsnX.o231297  d17pXsnX.o231696  d17pXsnX.o232742
queues/: d17p64sn0.sub  d17p64snX.sub  d17pXsn0.sub  d17pXsnX.sub  hpc.sub
scripts/: envsetup.sh  getjobs.sh  mpi-compile.sh  mpi-queue.sh  mpicxx-compile-line.sh  mpirun.sh
src/: BNB.cpp  BNB.h  Graph.cpp  Graph.h  Map.cpp  Map.h  Person.cpp  Person.h
src/data/: results.csv
